begin convert to function within get request

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <h1 class="h-1/5 text-center uppercase text-6xl"><span class="text-primary font-[900]">LastFM</span> Stats Retriever </h1>
 
-    <form action="/results" class="my-6 w-96 mx-auto">
+    <form action="/loading" class="my-6 w-96 mx-auto">
         <div class="form-control w-full gap-4">
             <label class="label gap-2 w-full">
                 <span class="label-text">LastFM Username</span>
