added top albums and artists view

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 <body class="mx-2 my-10 bg-base-100 text-neutral flex flex-col justify-center items-center h-screen space-y-6">
 
-    <h1 class="h-1/5 text-center uppercase text-6xl font-display"><span class="text-primary font-[900]">LastFM</span>
+    <h1 class="h-1/5 text-center uppercase text-6xl font-display font-light"><span class="text-primary font-bold">LastFM</span>
         Stats Retriever </h1>
 
     <form action="/results" class="my-6 w-96 mx-auto">
